# pvr.eon

./: .clang-format  .travis.yml  CMakeLists.txt  FindBotan.cmake  FindBotan.old  FindRapidJSON.cmake  HrtiAPI.cpp  README.md  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/common/botan/: CMakeLists.txt  botan.sha256  botan.txt
depends/common/tinyxml2/: tinyxml2.sha256
pvr.eon/: addon.xml.in  changelog.txt
pvr.eon/resources/: settings.xml
pvr.eon/resources/language/resource.language.de_de/: strings.po
pvr.eon/resources/language/resource.language.en_gb/: strings.po
pvr.eon/resources/language/resource.language.en_us/: strings.po
pvr.magenta/: README.md  addon.xml.in
pvr.magenta/resources/: settings.xml
pvr.magenta/resources/language/resource.language.de_de/: strings.po
pvr.magenta/resources/language/resource.language.en_gb/: strings.po
pvr.magenta/resources/language/resource.language.en_us/: strings.po
src/: Globals.h  PVREon.cpp  PVREon.h  PVRMagenta.cpp  PVRMagenta.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  cipher.cpp  cipher.h  pkcs7_padding.c  pkcs7_padding.hpp
src/http/: Cache.h  HttpClient.cpp  HttpClient.h
